# rust-extract-text

./: Cargo.toml
src/: dotext.rs  lib.rs  main.rs
src/ancillary/: mod.rs
src/dotext/: doc.rs  docx.rs  odt.rs
tests/resources/expected/: empty_file.json
tests/resources/expected/docs/: 5407953830.pdf.json  5407953830.pdf.linux.json
tests/resources/expected/emails/: msg_in_msg.msg.json  msg_in_msg.msg.linux.json
tests/resources/files_to_scan/archives/: 7z_example.7z  ArtemisTestVirusWithSignedExes.7z  with_alternative_password.7z  with_password.7z
tests/resources/files_to_scan/binary/: fpext.msg
tests/resources/files_to_scan/docs/: (20161003 102343921) (1).xls  02.1 - 71151_VB_A2_8th.doc  05-05-2022.xlsx  2016 TestFrequency - Vitamins - Nov-2015 to Oct-2016.xlsb  231007 - P-2 use.xls  Airports.xlsm  BankCommerceCommisionIssues.ods  CPROD - 13NZAK0060930 - 20130927.xlsx  Cover Letter - Rocket Lab - Software Engineer.odt  Heinz Watties Reporting V06.xlsb  IC3_231019_gradient.xls  Teaching Philosophy 2016.docx  eLIMS-FGS Incident Record Model Template.docm  flags32 bits.xlsb  pass_protected_with_readable_text.xls
tests/resources/files_to_scan/emails/: Agworld soil sampling information - Eurofins NZ.msg  COD eLIMS.msg  Prochem CT current process .eml  msg_in_msg.msg
tests/resources/files_to_scan/txt/: MsgSearcher.sql  text_cp1252.txt  text_utf16le.txt  text_utf8.txt
