[package]
name = "extract_text"
version = "0.1.0"
edition = "2024"

[dependencies]
calamine = "0.31.0"
cfb = "0.12.0"
crc-fast = "1.6.0"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
helper_lib = { git = "https://github.com/rayzinnz/rust-helper-lib.git" }
log = "0.4.28"
mail-parser = "0.11.1"
quick-xml = "0.38.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sevenz-rust = { version = "0.6.1", features = ["aes256"] }
simplelog = "^0.12.0"
time = "0.3.44"
uuid = {version = "1.18.1", features = ["v4"]}
walkdir = "2.5.0"
zip = "6.0.0"
